# eos-control

./: .gitlab-ci.yml  Cargo.toml  README.md  build.rs
assets/: 45_eos-control
src/: elevate.rs  gui.rs  labels.rs  main.rs  netcfg.rs  power.rs  selftest.rs  sys.rs
src/security/: db.rs  mod.rs  scan.rs
ui/: control.slint
