[package]
name = "eos-control"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "E-OS Control — unified Crimson control center (system, processes + capabilities, security)"
repository = "https://gitlab.com/e-os/eos-control"
build = "build.rs"
default-run = "eos-control"

[[bin]]
name = "eos-control"
path = "src/main.rs"

# Privileged power shim (reboot/shutdown): elevates via /scheme/sudo, then writes
# sys:kstop. Standalone so the GUI never runs as root — see src/power.rs.
[[bin]]
name = "eos-power"
path = "src/power.rs"

[dependencies]
# Security tab: blake3 file-integrity hashing (default-features off drops the
# C/asm SIMD paths that don't cross-compile cleanly) + a WAL SQLite baseline.
blake3   = { version = "1", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
# GUI via Slint; the Redox backend (software renderer over orbclient) + fonts
# live in the shared eos-ui crate.
slint  = { version = "1.17", default-features = false, features = ["compat-1-0", "std", "renderer-software"], optional = true }
eos-ui = { git = "https://github.com/Gh0s777tt/eos-ui.git", rev = "9fb3f3e4a3ecf1c152b03662db0723869206e5d6", optional = true }

[features]
# The GUI targets Redox; hosts build the CLI/selftest half (--no-default-features).
default = ["gui"]
gui = ["dep:slint", "dep:eos-ui"]

[build-dependencies]
slint-build = "1.17"

# Force-kill (SIGKILL). On Redox the modern signal path is `libredox::call::kill`
# (the raw syscall crate dropped `kill`); relibc maps it to the kernel ForceKill.
# On a host it's POSIX kill(2) via libc.
[target.'cfg(target_os = "redox")'.dependencies]
# `mkns` unlocks the namespace ops the /scheme/sudo elevation needs (eos-power).
libredox = { version = "0.1.18", features = ["mkns"] }
# Imported as `syscall` (its lib name) — for CallFlags::FD in the elevation.
redox_syscall = "0.9"

[target.'cfg(not(target_os = "redox"))'.dependencies]
libc = "0.2"

[profile.release]
overflow-checks = true   # E-OS hardening baseline
